# flux-messenger

./: .gitignore  README.md  start_all.sh  stop_all.sh
ChatServer/: CMakeLists.txt  vcpkg.json
ChatServer/include/: AsioIOServicePool.h  CServer.h  CSession.h  ChatGrpcClient.h  MsgNode.h  MysqlDao.h  RedisMgr.h  Singleton.h  config.ini  const.h
ChatServer/src/: CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServiceImpl.cpp  ConfigMgr.cpp  DistLock.cpp  LogicSystem.cpp  MsgNode.cpp  MysqlDao.cpp  RedisMgr.cpp  message.pb.cc
ChatServer2/: CMakeLists.txt  vcpkg.json  架构设计文档.md
ChatServer2/include/: AsioIOServicePool.h  CServer.h  CSession.h  LogicSystem.h  MsgNode.h  MysqlDao.h  RedisMgr.h  Singleton.h  config.ini  const.h  message.grpc.pb.h  message.pb.h
ChatServer2/src/: AsioIOServicePool.cpp  CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServiceImpl.cpp  ConfigMgr.cpp  DistLock.cpp  LogicSystem.cpp  MsgNode.cpp  MysqlDao.cpp  RedisMgr.cpp  UserMgr.cpp
GateServer/: CMakeLists.txt  generate_proto.sh  架构设计文档.md
StatusServer/: CMakeLists.txt  架构设计文档.md
StatusServer/include/: AsioIOServicePool.h  ChatGrpcClient.h  ConfigMgr.h  DistLock.h  MysqlDao.h  RedisMgr.h  Singleton.h  StatusServiceImpl.h  config.ini  const.h  logger.h
StatusServer/src/: AsioIOServicePool.cpp  DistLock.cpp  MysqlDao.cpp  RedisMgr.cpp  StatusServer.cpp  StatusServiceImpl.cpp
VarifyServer/: config.json  email.js  package.json  redis.js  server.js
presure/: Http_presure.py  pressure_test_tcp_max_conn.py  分布式各服务RPS.txt
(+21 files in other folders)
